[project]
name = "reflection-removal"
version = "1.0.0"
description = "A model for removing reflections using a single image."
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "numpy==1.26.4",
    "onnx==1.19.1",
    "onnxruntime-gpu==1.23.2",
    "onnxscript==0.5.6",
    "onnxsim==0.4.30",
    "onnxslim==0.1.69",
    "opencv-python==4.11.0.86",
    "scipy==1.16.2",
    "sit4onnx==1.0.10",
    "tensorboard==2.20.0",
    "termcolor==3.1.0",
    "torch==2.5.1",
    "torchmetrics==1.8.2",
    "torchvision==0.20.1",
    "tqdm==4.67.1",
]
[tool.uv]
override-dependencies = [
    "sympy>=1.13.1,<1.14",
]
